# barge-in-poc

./: .env.example  .gitignore  README.md  pyproject.toml
data/knowledge_base/: api-reference.md  company-overview.md  novaboard-features.md  pricing-plans.md  security-compliance.md  troubleshooting.md
docs/: architecture.md
src/: config.py  controller.py  conversation.py  main.py  types.py  utils.py  web_main.py
src/audio/: capture.py  playback.py  vad.py
src/services/: llm.py  rag.py  stt.py  tools.py  tts.py
src/web/: audio_capture.py  audio_playback.py  server.py
src/web/static/: index.html
